error.txt

C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052>gradlew build

> Task :architectureReview

===============================================================
================ PEER REVIEW AUTOMATIZADO ====================
===============================================================

≡ƒôü Proyecto: tnd-msa-sp-orqclientes0052
≡ƒôè Threshold Configurado: 7 / 10

---------------------------------------------------------------
≡ƒÅù∩╕Å  ARQUITECTURA:
   Estilo detectado: HEXAGONAL
   Archivos analizados: 92
   Paquetes encontrados: 25
   Java 21: Γ£à

   ≡ƒôè Desglose de puntos:
      ΓÇó Arquitectura: 5 / 5
      ΓÇó Paquetes: 3 / 4
      ΓÇó Nomenclatura: 4 / 7
      ΓÇó Archivos requeridos: 2 / 2

   Puntaje final: 8.2 / 10
   BLOQUEAR PR: NO Γ£à

   Γ£à Todos los archivos requeridos est├ín presentes

   ≡ƒôï Observaciones generales (26):
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.application.builders': 'OrchestrationRequestBodyFactory' | Archivo: OrchestrationRequestBodyFactory.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.application.builders': 'OrchestrationResponseAssembler' | Archivo: OrchestrationResponseAssembler.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.application.port.config': 'OrchestrationConfigurationPort' | Archivo: OrchestrationConfigurationPort.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.application.port.config': 'OrquestadorSoapErrorPort' | Archivo: OrquestadorSoapErrorPort.java
      ΓÇó [Naming] Interface debe terminar en sufijo apropiado (Service, ServicePort, Repository, RepositoryPort, Mapper, Handler, Provider, Factory, Port, PortInput, PortOutput): 'OrchestrationStrategy' | Archivo: OrchestrationStrategy.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.application.service.strategy': 'OrchestrationStrategyResolver' | Archivo: OrchestrationStrategyResolver.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.domain.constants': 'QueryTarjetasDebitCustomersMsFlowConstants' | Archivo: QueryTarjetasDebitCustomersMsFlowConstants.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.domain.dto': 'OrchestrationConfiguration' | Archivo: OrchestrationConfiguration.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.domain.util': 'EsbGenericoUtils' | Archivo: EsbGenericoUtils.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.domain.util': 'EsqlExpressionSupport' | Archivo: EsqlExpressionSupport.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.exception': 'ErrorCatalogConstants' | Archivo: ErrorCatalogConstants.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.config': 'OrquestadorErrorFactory' | Archivo: OrquestadorErrorFactory.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.properties.webclient': 'WebClientProperties' | Archivo: WebClientProperties.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'BodyInWsClientes0141' | Archivo: BodyInWsClientes0141.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'BodyInWsClientes0141CriteriosBusqueda' | Archivo: BodyInWsClientes0141CriteriosBusqueda.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'BodyInWsClientes0141Ordenante' | Archivo: BodyInWsClientes0141Ordenante.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'ConsultarTarjetasDebitoCliente01' | Archivo: ConsultarTarjetasDebitoCliente01.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'HeaderIn' | Archivo: HeaderIn.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'SoapHeader' | Archivo: SoapHeader.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'BodyOutWsClientes0141' | Archivo: BodyOutWsClientes0141.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'BodyOutWsClientes0141Tarjetas' | Archivo: BodyOutWsClientes0141Tarjetas.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'BodyOutWsClientes0141TarjetasTarjeta' | Archivo: BodyOutWsClientes0141TarjetasTarjeta.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'DocumentoOut' | Archivo: DocumentoOut.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'ErrorOut' | Archivo: ErrorOut.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'HeaderOut' | Archivo: HeaderOut.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'SoapHeader' | Archivo: SoapHeader.java

   Γ£à Arquitectura aprobada

---------------------------------------------------------------
≡ƒº¬ PRUEBAS UNITARIAS:
   Archivos de test analizados: 0

   Γ¥î ERROR: No se encontraron archivos de pruebas unitarias
   El proyecto DEBE tener pruebas unitarias en src/test/java

   Puntaje final: 0 / 10
   BLOQUEAR PR: SI Γ¥î

   ΓÜá∩╕Å  El proyecto NO tiene pruebas unitarias - Esto es OBLIGATORIO

===============================================================

ΓÜá∩╕Å        PEER REVIEW - ADVERTENCIAS DETECTADAS         ΓÜá∩╕Å

   ΓÜá∩╕Å  Pruebas Unitarias: NO EXISTEN - El proyecto DEBE tener pruebas unitarias

Por favor, revisa y corrige los problemas antes de continuar.

ΓÜá∩╕Å    PEER REVIEW COMPLETADO CON ADVERTENCIAS     ΓÜá∩╕Å


> Task :generateJavaFromWsdl
Generando clases desde: ORQClientes0052.wsdl
   Γ£ô Usando binding global: jaxb-bindings.xml
SLF4J(W): No SLF4J providers were found.
SLF4J(W): Defaulting to no-operation (NOP) logger implementation
SLF4J(W): See https://www.slf4j.org/codes.html#noProviders for further details.
Loading FrontEnd jaxws ...
Loading DataBinding jaxb ...
wsdl2java -d C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\build\generated\sources\wsdl -p com.pichincha.sp.generated -verbose -autoNameResolution -xjc-enableIntrospection -xjc-XautoNameResolution -exsh true -mark-generated -b C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\gradle\wrapper\jaxb-bindings.xml C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\resources\legacy\ORQClientes0052.wsdl
wsdl2java - Apache CXF 4.1.1


> Task :postProcessGeneratedWsdl
Γ£à Post-procesamiento unificado completado

> Task :compileJava
C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\application\service\OrchestrationConfigurationService.java:33: error: cannot find symbol
                + safe(bodyIn == null ? null : bodyIn.productType());
                                                     ^
  symbol:   method productType()
  location: variable bodyIn of type OrchestratorBodyInDto
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/darochar/Documents/pruebas/tnd-msa-sp-orqclientes0052/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use unchecked or unsafe operations.
  C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\application\service\OrchestrationConfigurationService.java:33: error: cannot find symbol
                  + safe(bodyIn == null ? null : bodyIn.productType());
                                                       ^
    symbol:   method productType()
    location: variable bodyIn of type OrchestratorBodyInDto
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
5 actionable tasks: 5 executed
